--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chg-c-notifications",
   "version": "1.0.0",
   "description": "Handles sending push notifications for CHG-C Toolkit",
+  "type": "commonjs",
   "private": true,
   "dependencies": {
     "@supabase/supabase-js": "^2.0.0",
